--- a/HeThongHoTroCuocThi/src/main/resources/templates/CuocThi/listUser.html
+++ b/HeThongHoTroCuocThi/src/main/resources/templates/CuocThi/listUser.html
@@ -43,7 +43,7 @@
             <div class="form-row">
                 <div class="form-group col-md-3">
                     <label for="startDate">Từ ngày:</label>
-                    <input type="date" class="form-control" id="startDate" name="startDate" placeholder="yyyy-MM-dd">
+                    <input type="date" class="form-control" id="startDate" name="startDate" placeholder="yyyy-MM-dd" onchange="setEndDate()">
                 </div>
                 <div class="form-group col-md-3">
                     <label for="endDate">Đến ngày:</label>
@@ -105,5 +105,6 @@
     </table>
 </div>
 <th:block th:replace="~{layout::footer}"></th:block>
+<script th:src="@{/js/setEndday.js}"></script>
 </body>
 </html>
