Đã fix được các lỗi về chỉnh sửa hình ảnh

--- a/HeThongHoTroCuocThi/src/main/resources/templates/CuocThi/list.html
+++ b/HeThongHoTroCuocThi/src/main/resources/templates/CuocThi/list.html
@@ -34,7 +34,6 @@
 <body>
 <th:block th:replace="~{layout::header}"></th:block>
 
-
 <div class="container my-5">
     <div class="d-flex justify-content-between align-items-center mb-3">
         <h1 class="my-4">DANH SÁCH CUỘC THI</h1>
@@ -54,8 +53,7 @@
                 </div>
                 <div class="form-group col-md-2">
                     <label for="location">Địa điểm:</label>
-                    <input type="text" class="form-control" id="location" name="location"
-                           placeholder="Nhập địa điểm thi">
+                    <input type="text" class="form-control" id="location" name="location" placeholder="Nhập địa điểm thi">
                 </div>
                 <div class="form-group col-md-2">
                     <label for="monThi">Môn thi:</label>
