--- a/HeThongHoTroCuocThi/src/main/resources/templates/layout.html
+++ b/HeThongHoTroCuocThi/src/main/resources/templates/layout.html
@@ -7,10 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initialscale=1.0">
     <title>MOS - Your Gateway to Academic Excellence</title>
-    <link th:fragment="link-css" rel="stylesheet"
-          th:href="@{/css/bootstrap.min.css}">
-    <link th:fragment="custom-css" rel="stylesheet"
-          th:href="@{/css/style.css}">
+    <link th:fragment="link-css" rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    <link th:fragment="custom-css" rel="stylesheet" th:href="@{/css/style.css}">
     <style>
         .icon-text {
             display: inline-block;
@@ -135,8 +133,8 @@
     <div class="container text-center">
         <p>Powered by <a href="https://www.hutech.edu.vn/" class="text-white">HUTECH Education</a></p>
     </div>
-    <script th:src="@{/js/bootstrap.min.js}"></script>
-    <script th:src="@{/js/jquery-3.7.0.min.js}"></script>
 </footer>
+<script th:src="@{/js/bootstrap.min.js}"></script>
+<script th:src="@{/js/jquery-3.7.0.min.js}"></script>
 </body>
 </html>
