chưa fix được details cuộc thi

--- a/HeThongHoTroCuocThi/src/main/resources/templates/MonThi/list.html
+++ b/HeThongHoTroCuocThi/src/main/resources/templates/MonThi/list.html
@@ -10,7 +10,7 @@
 <th:block th:replace="~{layout::header}"></th:block>
 <div class="container my-5">
     <div class="d-flex justify-content-between align-items-center mb-3">
-        <h1 class="my-4">Danh Sách Môn Thi</h1>
+        <h1 class="my-4">DANH SÁCH MÔN THI</h1>
         <a class="btn btn-success mb-4" th:href="@{/MonThis/add}">Tạo mới</a>
     </div>
     <table class="table table-striped table-hover">
