--- a/HeThongHoTroCuocThi/src/main/resources/templates/PhieuKetQua/search.html
+++ b/HeThongHoTroCuocThi/src/main/resources/templates/PhieuKetQua/search.html
@@ -18,7 +18,7 @@
             <input type="text" class="form-control" id="cccd" required placeholder="Nhập cccd">
             <input type="text" class="form-control" id="pdkId" required placeholder="Nhập mã phiếu đăng ký">
             <div class="input-group-append">
-                <button type="button" class="btn btn-primary" onclick="searchPQK()">Xác nhận</button>
+                <button type="button" class="btn btn-primary" onclick="searchPKQ()">Xác nhận</button>
             </div>
         </div>
         <div th:if="${errorMessage != null}" class="alert alert-danger" th:text="${errorMessage}"
@@ -37,6 +37,7 @@
             <th>Thao tác</th>
         </tr>
         <tbody id="pkq-table-body">
+
         </tbody>
     </table>
 </div>
