--- a/HeThongHoTroCuocThi/src/main/resources/templates/Truong/edit.html
+++ b/HeThongHoTroCuocThi/src/main/resources/templates/Truong/edit.html
@@ -20,8 +20,8 @@
             <input type="text" class="form-control" id="tenTruong" th:field="*{tenTruong}" required>
         </div>
         <div class="form-group mb-4">
-            <label for="truong">Loại trường</label>
-            <select class="form-control" id="truong" th:field="*{loaiTruong}">
+            <label for="loaiTruong">Loại trường</label>
+            <select class="form-control" id="loaiTruong" th:field="*{loaiTruong}" required>
                 <option value="">-- Chọn loại trường --</option>
                 <option th:each="loaiTruong : ${listLoaiTruong}" th:value="${loaiTruong.id}"
                         th:text="${loaiTruong.tenLoaiTruong}"></option>
