--- a/HeThongHoTroCuocThi/src/main/resources/templates/User/login.html
+++ b/HeThongHoTroCuocThi/src/main/resources/templates/User/login.html
@@ -18,11 +18,11 @@
         <div class="card-body p-5 text-center">
           <h4><strong>HỆ THỐNG HỖ TRỢ CUỘC THI</strong></h4>
           <p class="mb-4 text-secondary">Nhập tài khoản và mật khẩu.</p>
-          <a href="/oauth2/authorization/google"
-             class="btn btn-outline-danger btn-floating m-1"
-             role="button">
-            Đăng nhập với google
-          </a>
+<!--          <a href="/oauth2/authorization/google"-->
+<!--             class="btn btn-outline-danger btn-floating m-1"-->
+<!--             role="button">-->
+<!--            Đăng nhập với google-->
+<!--          </a>-->
           <hr class="my-4">
           <form th:action="@{/login}" method="post">
             <div th:if="${param.error}" class="alert alert-danger">
